Project modernized. java, Spring, Redis, TimescaleDB version updated. Server updated to Webflux.